--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "axios": "^0.19.2",
     "bootstrap-vue": "^2.9.0",
     "core-js": "^3.6.4",
-    "firebase": "^7.12.0",
+    "firebase": "^8.1.2",
     "moment": "^2.29.1",
     "native-toast": "^2.0.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.2",
-    "vue-full-calendar": "^2.8.1-0",
+    "vue-full-calendar": "^3.0.0",
     "vue-json-csv": "^1.2.11",
     "vue-router": "^3.1.5",
     "vue2-editor": "^2.10.2",
