--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-apexcharts": "^1.5.2",
     "vue-full-calendar": "^3.0.0",
     "vue-json-csv": "^1.2.11",
+    "vue-json-excel": "^0.3.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue2-editor": "^2.10.2",
