--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/vue": "^5.5.0",
     "ant-design-vue": "^1.7.2",
     "apexcharts": "^3.17.0",
     "axios": "^0.19.2",
