--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "native-toast": "^2.0.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.2",
-    "vue-full-calendar": "^3.0.0",
+    "vue-clipboard2": "^0.3.1",
+    "vue-full-calendar": "^2.8.1-0",
     "vue-json-csv": "^1.2.11",
     "vue-json-excel": "^0.3.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
+    "vue-simple-calendar": "^6.0.0-b3",
     "vue2-editor": "^2.10.2",
     "vuex": "^3.4.0"
   },
